--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta name="msapplication-TileImage" content="/images/manifest/Indais.Icon.png">
     <meta name="msapplication-TileColor" content="#19BFEF">
     <meta name="msapplication-tap-highlight" content="no">
+    
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
 
     <script>
       // Setup Polymer options
@@ -95,7 +97,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style>
       body {
         margin: 0;
-        font-family: 'Proxima Nova', 'Noto', sans-serif;
+        font-family: 'Open Sans', sans-serif;
         line-height: 1.5;
         min-height: 100vh;
         background-color: #E9EBED;
