--- a/src/my-workspaces-card.html
+++ b/src/my-workspaces-card.html
@@ -27,7 +27,7 @@
                 flex-wrap: nowrap;
                 overflow-x: scroll;
                 width: 100%;
-                flex-shrink: 0;
+/*                flex-shrink: 0;*/
             }
             #title {
                 color: #464646;
