Change to app-drawer

--- a/src/indais-app.html
+++ b/src/indais-app.html
@@ -118,6 +118,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     
     </style>
 
+
+  
+  
+   
+   
+<!--   Old Structure
     <app-location route="{{route}}"></app-location>
     <app-route
         route="{{route}}"
@@ -170,7 +176,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
       </div>
     </paper-drawer-panel>
- 
+ -->
   </template>
 
   <script>
