Got iron-pages to work
*note to self, check tag spelling*

--- a/src/my-dashboard.html
+++ b/src/my-dashboard.html
@@ -102,7 +102,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                         <iron-image sizing="contain" src="../images/new_learning_models.png"></iron-image>
                         New Learning Model</paper-button>
                     <paper-button raised="1" class="squareCard" href="/datasets" name="datasets">
-                        <iron-image sizing="contain" src="../images/add_datasource.png"></iron-image>
+                        <iron-image sizing="contain" src="../images/add_datasource.png" href="my-datasets.html"></iron-image>
                         Add Datasource</paper-button>
                     <paper-button raised="1" class="squareCard">
                         <iron-image sizing="contain" src="../images/share_workspace.png"></iron-image>
