--- a/src/indais-app.html
+++ b/src/indais-app.html
@@ -120,10 +120,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 
   
-  
    
-   
-<!--   Old Structure
+
     <app-location route="{{route}}"></app-location>
     <app-route
         route="{{route}}"
@@ -162,7 +160,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             attr-for-selected="name"
             fallback-selection="view404"
             role="main">
-          <my-dashboard name="dashboard"></my-dashbuard>
+          <my-dashboard name="dashboard"></my-dashboard>
           <my-datasets name="datasets"></my-datasets>
           <my-workspaces name="workspaces"></my-workspaces>
           <my-learning-models name="learning-models"></my-learning-models>
@@ -176,7 +174,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
       </div>
     </paper-drawer-panel>
- -->
+ 
   </template>
 
   <script>
@@ -196,7 +194,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       ],
 
       _routePageChanged: function(page) {
-        this.page = page || 'datasets';
+        this.page = page || 'dashboard';
       },
 
       _pageChanged: function(page) {
