--- a/src/my-dashboard.html
+++ b/src/my-dashboard.html
@@ -97,7 +97,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 </div>
                 <div class="tasksContainer">
                     <!--Data-binding is used to pass {{img}} and {{caption}} attributes to the button-card element, which handles styling and hover-states-->
-                    <button-card img="../images/new_workspaces.png" caption="New Workspace" color="#03A9F4"></button-card>
+                    <button-card img="../images/new_workspaces.png" caption="New Workspace"></button-card>
                     <button-card img="../images/new_learning_models.png" caption="New Learning Model"></button-card>
                     <button-card img="../images/add_datasource.png" caption="Add Datasource" on-tap="_datasets"></button-card>
                     <button-card img="../images/share_workspace.png" caption="Share Workspace"></button-card>
@@ -136,6 +136,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             is: 'my-dashboard',
             
             //This does not update the URL... something to do with app-route or app-location in the parent node. Need to review, but so far does not cause issues. 
+//            _datasets: function (page) {
+//                var page = this.parentNode;
+//                page.selected = 'datasets';
+//                console.log(page);
+//            },
+            
             _datasets: function (page) {
                 var page = this.parentNode;
                 page.selected = 'datasets';
